--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="nav">
         <div class="container">
             <div class="nav-content">
-                <a href="#" class="logo">My iOS Apps</a>
+                <a href="#" class="logo">Niche Apps Production</a>
                 <div class="nav-links">
                     <a href="#apps">Apps</a>
                     <a href="#about">About</a>
@@ -29,8 +29,8 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Crafting Beautiful iOS Experiences</h1>
-                <p class="hero-subtitle">Discover my collection of apps designed to make your life easier and more enjoyable</p>
+                <h1 class="hero-title">Small apps for smart ideas</h1>
+                <p class="hero-subtitle">Niche ideas are everywhere, I just build apps for them.</p>
                 <a href="#apps" class="btn-primary">Explore Apps</a>
             </div>
             <div class="hero-decoration">
@@ -44,24 +44,22 @@
     <!-- Apps Section -->
     <section id="apps" class="apps-section">
         <div class="container">
-            <h2 class="section-title">Featured Apps</h2>
+            <h2 class="section-title">Niche Apps</h2>
             <p class="section-subtitle">Available now on the App Store</p>
 
             <div class="apps-grid" id="appsGrid">
-                <!-- Sample App Cards - Replace with your actual apps -->
+                <!-- Commuter -->
                 <div class="app-card">
                     <div class="app-icon">
-                        <div class="app-icon-placeholder">📱</div>
+                        <img src="CommuterIcon.png" alt="Commuter Icon" class="app-icon-image">
                     </div>
                     <div class="app-content">
-                        <h3 class="app-name">App Name 1</h3>
-                        <p class="app-category">Productivity</p>
-                        <p class="app-description">A beautiful app that helps you stay organized and productive throughout your day.</p>
-                        <div class="app-stats">
-                            <span class="stat">⭐ 4.8</span>
-                            <span class="stat">📥 10K+</span>
-                        </div>
-                        <a href="#" class="btn-app-store" target="_blank" rel="noopener">
+                        <h3 class="app-name">Commuter</h3>
+                        <p class="app-category">Utility & Travel</p>
+                        <p class="app-description">Put your daily bus' arrival times on your home screen.</p>
+                        <p class="app-description">Available for San Francisco, New York, Stockholm and Rome.</p>
+
+                        <a href="https://apps.apple.com/se/app/commuter-widgets/id6738397174" class="btn-app-store" target="_blank" rel="noopener">
                             <svg width="120" height="40" viewBox="0 0 120 40" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="120" height="40" rx="8" fill="#000"/>
                                 <text x="60" y="24" font-family="Arial, sans-serif" font-size="12" fill="#fff" text-anchor="middle">View on App Store</text>
@@ -70,61 +68,18 @@
                     </div>
                 </div>
 
+                <!-- Mind Weekly -->
                 <div class="app-card">
                     <div class="app-icon">
-                        <div class="app-icon-placeholder">🎨</div>
+                        <img src="MindWeeklyIcon.png" alt="Mind Weekly Icon" class="app-icon-image">
                     </div>
                     <div class="app-content">
-                        <h3 class="app-name">App Name 2</h3>
-                        <p class="app-category">Creative</p>
-                        <p class="app-description">Express your creativity with powerful tools designed for artists and designers.</p>
-                        <div class="app-stats">
-                            <span class="stat">⭐ 4.9</span>
-                            <span class="stat">📥 25K+</span>
-                        </div>
-                        <a href="#" class="btn-app-store" target="_blank" rel="noopener">
-                            <svg width="120" height="40" viewBox="0 0 120 40" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="120" height="40" rx="8" fill="#000"/>
-                                <text x="60" y="24" font-family="Arial, sans-serif" font-size="12" fill="#fff" text-anchor="middle">View on App Store</text>
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="app-card">
-                    <div class="app-icon">
-                        <div class="app-icon-placeholder">🏃</div>
-                    </div>
-                    <div class="app-content">
-                        <h3 class="app-name">App Name 3</h3>
+                        <h3 class="app-name">Mind Weekly</h3>
                         <p class="app-category">Health & Fitness</p>
-                        <p class="app-description">Track your fitness journey and achieve your health goals with personalized insights.</p>
-                        <div class="app-stats">
-                            <span class="stat">⭐ 4.7</span>
-                            <span class="stat">📥 15K+</span>
-                        </div>
-                        <a href="#" class="btn-app-store" target="_blank" rel="noopener">
-                            <svg width="120" height="40" viewBox="0 0 120 40" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="120" height="40" rx="8" fill="#000"/>
-                                <text x="60" y="24" font-family="Arial, sans-serif" font-size="12" fill="#fff" text-anchor="middle">View on App Store</text>
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="app-card">
-                    <div class="app-icon">
-                        <div class="app-icon-placeholder">📚</div>
-                    </div>
-                    <div class="app-content">
-                        <h3 class="app-name">App Name 4</h3>
-                        <p class="app-category">Education</p>
-                        <p class="app-description">Learn something new every day with engaging content and interactive lessons.</p>
-                        <div class="app-stats">
-                            <span class="stat">⭐ 4.6</span>
-                            <span class="stat">📥 8K+</span>
-                        </div>
-                        <a href="#" class="btn-app-store" target="_blank" rel="noopener">
+                        <p class="app-description">Log daily gratitude, get an uplifting summary at the end of the week.</p>
+                        <p class="app-description">Apple Rings, for mental health rather than just fitness.</p>
+                    
+                        <a href="https://apps.apple.com/se/app/mind-weekly/id6753870098" class="btn-app-store" target="_blank" rel="noopener">
                             <svg width="120" height="40" viewBox="0 0 120 40" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="120" height="40" rx="8" fill="#000"/>
                                 <text x="60" y="24" font-family="Arial, sans-serif" font-size="12" fill="#fff" text-anchor="middle">View on App Store</text>
@@ -142,14 +97,10 @@
             <div class="about-content">
                 <h2 class="section-title">About Me</h2>
                 <p class="about-text">
-                    I'm an iOS developer passionate about creating intuitive and beautiful applications
-                    that solve real problems. Each app is crafted with attention to detail, user experience,
-                    and performance in mind.
+                    My name is Fabrizio. I am a developer by profession, with a hobby of building apps that I love to use myself.
                 </p>
                 <p class="about-text">
-                    With years of experience in iOS development, I strive to build apps that users love
-                    and rely on every day. From concept to App Store, every project is a journey of
-                    innovation and creativity.
+                    I like to believe that more people out there would appreciate these apps and their utility, as much as I do.
                 </p>
             </div>
         </div>
@@ -159,17 +110,17 @@
     <section id="contact" class="contact-section">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
-            <p class="section-subtitle">Have questions or feedback? I'd love to hear from you!</p>
+            <p class="section-subtitle">Have questions or feedback? Do you have a niche idea you'd like to discuss? I'd love to hear from you!</p>
             <div class="contact-links">
-                <a href="mailto:your.email@example.com" class="contact-link">
+                <a href="mailto:fabrizio90@icloud.com" class="contact-link">
                     <span class="contact-icon">📧</span>
                     <span>Email</span>
                 </a>
-                <a href="https://twitter.com/yourusername" class="contact-link" target="_blank" rel="noopener">
+                <a href="https://twitter.com/fabriziodenny" class="contact-link" target="_blank" rel="noopener">
                     <span class="contact-icon">🐦</span>
                     <span>Twitter</span>
                 </a>
-                <a href="https://github.com/yourusername" class="contact-link" target="_blank" rel="noopener">
+                <a href="https://github.com/fabriziodemaria" class="contact-link" target="_blank" rel="noopener">
                     <span class="contact-icon">💻</span>
                     <span>GitHub</span>
                 </a>
@@ -180,7 +131,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 My iOS Apps. All rights reserved.</p>
+            <p>&copy; 2025 Fabrizio Demaria. All rights reserved.</p>
             <p class="footer-note">Made with ❤️ for iOS</p>
         </div>
     </footer>
